fixed a bug in Stack Overflow grey header

--- a/stack-overflow/style.css
+++ b/stack-overflow/style.css
@@ -1,6 +1,6 @@
 .so-header {
 	background-color: #efefef;
-	border-top: none;
+	border-top-color: #efefef;
 }
 .so-header .navigation .beta-badge {
 	display: none;
